fixed logo appearing too big

--- a/public/css/videos.css
+++ b/public/css/videos.css
@@ -1,8 +1,9 @@
-.videoTab{
-
-
-}
-
+.navbar-brand img {
+	height: 50px;
+	/* put value of image height as your need */
+	float: left;
+	margin-right: 7px;
+  }
 .hidden {
 	display: none;
 }
